--- a/static/styles.css
+++ b/static/styles.css
@@ -63,7 +63,7 @@ ul.stickerList li p.smallprint { margin-top: 0.1em; }
 
 /* Page */
 #wrapper {margin: 0 auto; width: 982px; }
-html { background: #B85C1E url(../img/main-background.jpg) no-repeat top center; }
+html { background: #B85C1E; }
 body { font-family: arial; font-size: 14px; }
 .sticker { 
 	background-color: white; padding: 1.25em 1.45em 1.25em 1.55em; margin: 0.5em 0 3em 0; -moz-border-radius: 1em; -webkit-border-radius: 1em; border-radius: 1em; 
@@ -93,6 +93,12 @@ body { font-family: arial; font-size: 14px; }
 .liveExample p { margin-top: 0.9em; margin-bottom: 0.9em; }
 .liveExample select[multiple] { width: 100%; height: 8em; }
 .liveExample h2 { margin-top: 0.4em; }
+
+.search-box { margin: 2em 0 0; padding: 1em; background-color: #EEEEDD; border: 1px solid #CCC; max-width: 655px; }
+.search-box input { font-family: Arial; }
+.search-box b { font-weight: bold; }
+.search-box p { margin-top: 0.9em; margin-bottom: 0.9em; }
+.search-box h2 { margin-top: 0.4em; }
 
 /* Menu */
 .main-menu { display:table; float:right; margin: 1em 0 0.5em 0; font-size: 14px; font-weight: bold; }
